--- a/public/slides/beginners/day1/viewer.html
+++ b/public/slides/beginners/day1/viewer.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Admin Prez</title>
+		<meta charset="utf-8">
+	<title>Viewer</title>
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
@@ -10,17 +11,19 @@
 	<link href='//fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="../../assets/revealjs/css/reveal.css">
 	<link rel="stylesheet" href="../../assets/revealjs/css/theme/black.css" id="theme">
-</head>
 
+</head>
 <body>
-	<script>var sudo=true;</script>
+	<script>
+		const sudo = false;
+		</script>
 <span id="prez-root">
 	<!-- Prez Starts here, ANYTHING should be here unless you know what your doing-->
 	<!-- You got to copy and paste your CODE to ONLY viewer.js. "this is really getto", well yes
 	but for the sake of simplicity and also the fact that we aren't using JSX for awesome linting and debugging, shhhhh-->
 	<form class="login">
 		<span>Whats the Password (kittens)</span>
-		<input type="text" placeholder="Please enter your secret key!"/>
+		<input type="password" placeholder="Please enter your secret key!"/>
 		<input type="submit" value="➡" />
 	</form>
 
@@ -35,25 +38,27 @@
 				<section data-background="../../assets/img/3.jpg">Vertical Slide 2</section>
 				<section data-background="../../assets/img/4.jpg">Vertical Slide 3</section>
 			</section>
-			<section data-background="../../assets/img/5.jpg">Single Horizontal Slide 2</section>
-			<section>
-				<section data-background="../../assets/img/6.jpg">Vertical Slide 4</section>
-				<section data-background="../../assets/img/7.jpg">Vertical Slide 5</section>
-			</section>
 		</div>
 	</div>
 </span>
-	<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
-	<script src="../../assets/revealjs/lib/js/head.min.js"></script>
-	<script src="../../assets/revealjs/js/reveal.js"></script>
-	<script src="/socket.io/socket.io.js"></script>
-	<script src="../../assets/js/script.js"></script>
-<script>
-	var link = document.createElement( 'link' );
-	link.rel = 'stylesheet';
-	link.type = 'text/css';
-	link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
-	document.getElementsByTagName( 'head' )[0].appendChild( link );
-</script>
+			<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+			<script src="../../assets/revealjs/lib/js/head.min.js"></script>
+			<script src="../../assets/revealjs/js/reveal.js"></script>
+			<script src="/socket.io/socket.io.js"></script>
+			<script src="../../assets/js/script.js"></script>
+ <script>
+Reveal.initialize({
+controls: false,
+progress: true,
+});
+Reveal.configure({
+  keyboard: {
+	40: null,
+    38: null,
+	39: null,
+	37: null
+  }
+});
+ </script>
 </body>
 </html>
