--- a/public/slides/beginners/day1/index.html
+++ b/public/slides/beginners/day1/index.html
@@ -46,7 +46,7 @@
 						web languages: HTML, CSS & JS.
 					</p>
 				</section>
-				<section data-background="../../assets/img/4.jpg">
+				<section data-background="https://images.unsplash.com/photo-1505238680356-667803448bb6?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d39fe8df8ff9407562e2f89aec3c1318&auto=format&fit=crop&w=1500&q=80">
 					<h1>What is HTML?</h1>
 					<ul>
 						<style>
@@ -61,18 +61,18 @@
 						<li class="fragment fade-up" data-fragment-index="4">Styling is done using CSS, which we will talk about later</li>
 					</ul>
 				</section>
-				<section data-background="../../assets/img/4.jpg">
+				<section data-background="https://images.unsplash.com/photo-1531265726475-52ad60219627?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=cdf4bb37039e0671779b45f60c335987&auto=format&fit=crop&w=1536&q=80">
 				   <h1>Demos</h1>
 				   <p><a class="link">tinyurl.com/ComicDemoNemo</a></p>
 				   <p><a class="link">tinyurl.com/aboutMeDemo</a></p>
 				</section>
-				<section data-background="../../assets/img/4.jpg">
+				<section data-background="https://images.unsplash.com/photo-1531265726475-52ad60219627?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=cdf4bb37039e0671779b45f60c335987&auto=format&fit=crop&w=1536&q=80">
 					<h1>More about HTML</h1>
 					<li class="fragment fade-up" data-fragment-index="1">HTML is dumb. It has no logic.</li>
 					<!-- Image of logic the rapper-->
 					<span class="fragment fade-up" data-fragment-index="2"><img class="fragment fade-out" data-fragment-index="3" src="https://i.pinimg.com/originals/fb/d7/8e/fbd78e83aea96ce9fad83d89f9487512.jpg" height="30%" width="30%"></span>
 				 </section>
-				 <section data-background="../../assets/img/4.jpg">
+				 <section data-background="https://images.unsplash.com/photo-1531265726475-52ad60219627?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=cdf4bb37039e0671779b45f60c335987&auto=format&fit=crop&w=1536&q=80">
 					<li class="fragment fade-up" data-fragment-index="1">HTML is made up of 'tags'</li>
 					<li class="fragment fade-up" data-fragment-index="2">An opening tag looks like
 
@@ -93,8 +93,8 @@
 												</li>
 					<li class="fragment fade-up" ata-fragment-index="3">Most opening tags are always followed by a closing tag</li>
 				 </section>
-				 <section data-background="../../assets/img/4.jpg">
-					<h1>A simple HTML boilerplate</h1>
+				 <section data-background="https://images.unsplash.com/photo-1511842745775-b366af36db2a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=e282288c8f4b6153340a36e27bdb7c24&auto=format&fit=crop&w=1500&q=80">
+					<h1 class="black-txt">A simple HTML boilerplate</h1>
 					<pre><code>
 						    &lt;html&gt;
 							  &lt;head&gt;
@@ -106,15 +106,15 @@
 								</code></pre>
 							</li>
 				 </section>
-				 <section data-background="../../assets/img/4.jpg">
-					<h1>Headings and Paragraphs</h1>
+				 <section data-background="https://images.unsplash.com/photo-1511842745775-b366af36db2a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=e282288c8f4b6153340a36e27bdb7c24&auto=format&fit=crop&w=1500&q=80">
+					<h1 class="black-txt">Headings and Paragraphs</h1>
 					Heading: &lt;h1&gt;
 					<br>
 					Paragraph: &lt;p&gt;
 					<br>
 					<script async src="//jsfiddle.net/sbComputerScienceClub/67y9ntaj/embed/html,result/"></script>
 				 </section>
-				 <section data-background="../../assets/img/4.jpg">
+				 <section data-background="https://images.unsplash.com/photo-1531817251186-0238ce693579?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5995735b4d604c4477d554d27893a636&auto=format&fit=crop&w=1500&q=80">
 					<h1>Tags within Tags</h1>
 					<br>
 					<ul>
@@ -124,7 +124,7 @@
 					</ul>
 					<br>
 				 </section>
-				 <section data-background="../../assets/img/4.jpg">
+				 <section data-background="https://images.unsplash.com/photo-1531817251186-0238ce693579?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5995735b4d604c4477d554d27893a636&auto=format&fit=crop&w=1500&q=80">
 					<h1>Images in HTML</h1>
 					<br>
 					<ul>
@@ -132,6 +132,35 @@
 					</ul>
 					<script async src="//jsfiddle.net/sbComputerScienceClub/Latpru2v/embed/html,result/"></script>
 					<br>
+				 </section>
+				 <section data-background="../../assets/img/4.jpg">
+					<h1>Coloring for text</h1>
+					<br>
+					<ul>
+						Color can be defined using the styles attribute for any tag by adding some simple "inline css".
+						<li>
+								<pre><code data-trim data-noescape>
+										&lt;h1 style=&quot;color:blue;&quot;&gt;&lt;/h1&gt;
+											</code></pre>
+						</li>
+						<li>Predefined colors: style="blue;"</li>
+						<li>Hexadecimal colors: style="#000000;"</li>
+						<li>rgb colors: style = “color: rgb(r value, g value, b value);”</li>
+						<li>Add colors to this HTML page below</li>
+						<script async src="//jsfiddle.net/sbComputerScienceClub/Latpru2v/embed/html,result/"></script>
+					</ul>
+				 </section>
+				 <section data-background="https://images.unsplash.com/photo-1526666923127-b2970f64b422?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bdb6cf2659a6cc7dc29113c6ae4a5279&auto=format&fit=crop&w=1504&q=80">
+					<h1>Great tools to get colors</h1>
+					<br>
+					<ul>
+						<li>www.color-hex.com/</li>
+						<li>brandcolors.net/</li>
+						<li><a target="_blank" href="https://chrome.google.com/webstore/detail/colorpick-eyedropper/ohcpnigalekghcmgcdcenkpelffpdolg?hl=en">Or try this Chrome extention</a></li>
+					</ul>
+				 </section>
+				 <section data-background="https://images.unsplash.com/photo-1526666923127-b2970f64b422?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bdb6cf2659a6cc7dc29113c6ae4a5279&auto=format&fit=crop&w=1504&q=80">
+	<h1>Insert Rick Roll Here</h1>
 				 </section>
 		</div>
 	</div>
