First Day slides

--- a/public/slides/first/index.html
+++ b/public/slides/first/index.html
@@ -30,6 +30,7 @@
 			<section data-background="">
 				<h1>Welcome to the club computer science club <span id="year"></span></h1>
 				<script>let currentYear = new Date().getFullYear(); document.getElementById('year').innerText = `${currentYear}-${currentYear + 1}`</script>
+				<img height=10% width=20% src="https://lh3.googleusercontent.com/gQiFvFLav-rmjlzKpdBBysaiYAAgU9SKiQHVd91jLslt5L_vWIdzBM8FttVLLwYpozH-XUgXIHlAT1lDVVFW1UlMqPBOn2SW2Nj4F1Td" alt="">
 			</section>
 				<section data-background="https://www.solidbackgrounds.com/images/2560x1440/2560x1440-true-blue-solid-color-background.jpg">
 				  <h1>!IMPORTANT LINKS</h1>
@@ -40,127 +41,149 @@
 					Visit our site for more info: <a class="link">sbcompsciclub.github.io</a></p>
 				</section>
 				<section data-background="https://sironatherapeutichorsemanship.files.wordpress.com/2017/09/plain-green-wallpaper.jpg?w=730">
-					<h1>What is web developement?</h1>
 					<p>
-						Programming which consists of developing apps for the web such as websites, PWA (progressive web apps) and games using the
-						web languages: HTML, CSS & JS.
+						Frontend WEB DEVELOPER starting salary is > $75,000
+A FUTURE with LIMITLESS opportunities
+Drives society
 					</p>
 				</section>
 				<section data-background="https://images.unsplash.com/photo-1505238680356-667803448bb6?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d39fe8df8ff9407562e2f89aec3c1318&auto=format&fit=crop&w=1500&q=80">
-					<h1>What is HTML?</h1>
-					<ul>
-						<style>
-							.htmlc{
-								color:red;
-								text-decoration: underline;
-							}
-						</style>
-						<li class="fragment fade-up" data-fragment-index="1">Stands for - <span class="htmlc">H</span>yper <span class="htmlc">T</span>ext Markup <span class="htmlc">L</span>anguage</li>
-						<li class="fragment fade-up" data-fragment-index="2">Used to create web pages</li>
-						<li class="fragment fade-up" data-fragment-index="3">Primaraly used to create Static Content</li>
-						<li class="fragment fade-up" data-fragment-index="4">Styling is done using CSS, which we will talk about later</li>
-					</ul>
+					<h1>Join this club?</h1>
+					EXPLORE!
+					LEARN the basics, EXPAND your skills
+					Discover your PROBLEM SOLVING and CREATIVE nature
+					Computer Science Club
 				</section>
 				<section data-background="https://images.unsplash.com/photo-1531265726475-52ad60219627?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=cdf4bb37039e0671779b45f60c335987&auto=format&fit=crop&w=1536&q=80">
-				   <h1>Demos</h1>
-				   <p><a class="link">tinyurl.com/ComicDemoNemo</a></p>
-				   <p><a class="link">tinyurl.com/aboutMeDemo</a></p>
+				   <h1>Year Overview</h1>
+				 <ul>
+					 <li>Modern Web Development</li>
+					 <ul>
+						 <li>Focused on JavaScript, HTML, CSS</li>
+						 <li>Make whatever you like</li>
+					 </ul>
+					 <li>We encourage</li>
+					 <ul>
+						 <li>Collaboration</li>
+						 <li>Friendly competitions</li>
+					 </ul>
+					 <li>Git & GitHub</li>
+					 <li>2 Sections</li>
+				 </ul>
 				</section>
 				<section data-background="https://images.unsplash.com/photo-1531265726475-52ad60219627?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=cdf4bb37039e0671779b45f60c335987&auto=format&fit=crop&w=1536&q=80">
-					<h1>More about HTML</h1>
-					<li class="fragment fade-up" data-fragment-index="1">HTML is dumb. It has no logic.</li>
-					<!-- Image of logic the rapper-->
-					<span class="fragment fade-up" data-fragment-index="2"><img class="fragment fade-out" data-fragment-index="3" src="https://i.pinimg.com/originals/fb/d7/8e/fbd78e83aea96ce9fad83d89f9487512.jpg" height="30%" width="30%"></span>
+					<h1>Beginner & Advanced (overview) </h1>
+					<style>
+					* {
+    box-sizing: border-box;
+}
+
+.Crow {
+    display: flex;
+}
+
+.Ccolumn {
+    flex: 50%;
+    padding: 10px;
+}
+					</style>
+					<div class="Crow" style="font-size: 20px;">
+							<div class="Ccolumn" style="background-color:#aaa;">
+							  <h2>Beginner</h2>
+							  <ul>
+								  <li>HTML and CSS Introduction</li>
+								  <li>Advanced HTML/CSS Features</li>
+								  <li>Adding some JavaScript features to enhance the page </li>
+							  </ul>
+							</div>
+							<div class="Ccolumn" style="background-color:#bbb;">
+							  <h2>Advanced</h2>
+							  <ul>
+								  <li>Canvas for 2D and 3D Rendering</li>
+								  <li>Integrated API communication</li>
+								  <ul>
+									  <li>Weather</li>
+									  <li>Twilio</li>
+									  <li>Anything!</li>
+									  <li>Some coding experience</li>
+								  </ul>
+							  </ul>
+							</div>
+						  </div>
 				 </section>
 				 <section data-background="https://images.unsplash.com/photo-1531265726475-52ad60219627?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=cdf4bb37039e0671779b45f60c335987&auto=format&fit=crop&w=1536&q=80">
-					<li class="fragment fade-up" data-fragment-index="1">HTML is made up of 'tags'</li>
-					<li class="fragment fade-up" data-fragment-index="2">An opening tag looks like
-
-						<pre><code data-trim data-noescape>
-								&lt;tagname&gt;
-									</code></pre>
-								</li>
-					<li class="fragment fade-up" data-fragment-index="2">While a closing tag looks like
-
-										<pre><code data-trim data-noescape>
-												&lt;/tagname&gt;
-													</code></pre>
-												</li>
-										<li class="fragment fade-up" data-fragment-index="2">Put them together:
-										<pre><code data-trim>
-												<tagname></tagname>
-													</code></pre>
-												</li>
-					<li class="fragment fade-up" ata-fragment-index="3">Most opening tags are always followed by a closing tag</li>
+					<h1>Which one is right for me?</h1>
+					<div class="Crow">
+							<div class="Ccolumn" style="background-color:#aaa;">
+							  <h2>Beginner</h2>
+							  <ul>
+								  <li>Little coding experience </li>
+								  <li>No or very little HTML or CSS background </li>
+								  <li>No JavaScript Background</li>
+							  </ul>
+							</div>
+							<div class="Ccolumn" style="background-color:#bbb;">
+							  <h2>Advanced</h2>
+							   <ul>
+							   <li>Some coding experience</li>
+							   <li>Background in any language</li>
+							   <li>Just want to make things!</li>
+							</ul>
+							</div>
+						  </div>
+				</section>
+				 <section data-background="https://images.unsplash.com/photo-1511842745775-b366af36db2a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=e282288c8f4b6153340a36e27bdb7c24&auto=format&fit=crop&w=1500&q=80">
+					<h1 class="black-txt">Why javascript</h1>
+                     <ul>
+						<li>Endless Applications</li>
+						<li>Powerful libraries & Frameworks</li>
+						<ul>
+							<li>Node.js</li>
+							<li>Electron</li>
+							<li>React</li>
+						</ul>
+						<li>Works almost anywhere</li>
+					 </ul>
 				 </section>
 				 <section data-background="https://images.unsplash.com/photo-1511842745775-b366af36db2a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=e282288c8f4b6153340a36e27bdb7c24&auto=format&fit=crop&w=1500&q=80">
-					<h1 class="black-txt">A simple HTML boilerplate</h1>
-					<pre><code>
-						    &lt;html&gt;
-							  &lt;head&gt;
-							    &lt;title&gt; &lt;/title&gt;
-							    &lt;/head&gt;
-						      &lt;body&gt;
-							  &lt;/body&gt;
-							&lt;/html&gt;
-								</code></pre>
-							</li>
-				 </section>
-				 <section data-background="https://images.unsplash.com/photo-1511842745775-b366af36db2a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=e282288c8f4b6153340a36e27bdb7c24&auto=format&fit=crop&w=1500&q=80">
-					<h1 class="black-txt">Headings and Paragraphs</h1>
-					Heading: &lt;h1&gt;
-					<br>
-					Paragraph: &lt;p&gt;
-					<br>
-					<script async src="//jsfiddle.net/sbComputerScienceClub/67y9ntaj/embed/html,result/"></script>
-				 </section>
-				 <section data-background="https://images.unsplash.com/photo-1531817251186-0238ce693579?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5995735b4d604c4477d554d27893a636&auto=format&fit=crop&w=1500&q=80">
-					<h1>Tags within Tags</h1>
-					<br>
+					<h1 class="black-txt">Git & Github</h1>
 					<ul>
-						<li> Correct Embedding -> <span style="color:green">&lt;h1&gt;&lt;b&gt; Hello &lt;/b&gt; &lt;/h1&gt;</span></li>
-						<li>Close the innermost tag first, then the outermost.</li>
-						<li> Incorrect Embedding -> <span style="color:red">&lt;h1&gt; &lt;b&gt; Hello &lt;/h1&gt; &lt;/b&gt;</span></li>
+					<li>Programmers from all around the world encourage collaboration. </li>
+					<li style="font-size:20px;">					Almost every single application on your phone started out as a simple idea. That idea flourished into the final product you’re so used to, not by one developer, but by many diverse people working together to build something awesome.
+						</li>
+						<li  style="font-size:20px;">
+								The internet itself harbors one of the most innovative communities that strives to change the world: the open source world. All those questions that need answering are explained by physical strangers but virtual pioneers.
+						</li>
 					</ul>
 					<br>
+					So why not learn JavaScript for the web, through the web?
 				 </section>
 				 <section data-background="https://images.unsplash.com/photo-1531817251186-0238ce693579?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5995735b4d604c4477d554d27893a636&auto=format&fit=crop&w=1500&q=80">
-					<h1>Images in HTML</h1>
-					<br>
-					<ul>
-						<li>&lt;img src = &quot;url&quot; width = &quot;width in px or % &quot; height = &quot;height in px or %&quot;&gt;</li>
+					<h1>Credit Requirements</h1>
+	                <ul>
+						<li>Attend 50% of the meetings</li>
+						<ul>
+							<li>We recommend you attend as many as you can in the beginning!</li>
+							<li>Meetings dates: <a class="link">https://sbcompsciclub.github.io/calendar</a></li>
+						</ul>
+						<li>Pay to Participate	</li>
+						<li>Additional $5 club dues *amount may change</li>
 					</ul>
-					<script async src="//jsfiddle.net/sbComputerScienceClub/Latpru2v/embed/html,result/"></script>
+				 </section>
+				 <section data-background="https://images.unsplash.com/photo-1531817251186-0238ce693579?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5995735b4d604c4477d554d27893a636&auto=format&fit=crop&w=1500&q=80">
+					<h1>Hackathon</h1>
+					At the South Brunswick Public Library!
 					<br>
+					Date: <N>
+					<br>
+					stay tuned!
 				 </section>
 				 <section data-background="../../assets/img/4.jpg">
-					<h1>Coloring for text</h1>
-					<br>
-					<ul>
-						Color can be defined using the styles attribute for any tag by adding some simple "inline css".
-						<li>
-								<pre><code data-trim data-noescape>
-										&lt;h1 style=&quot;color:blue;&quot;&gt;&lt;/h1&gt;
-											</code></pre>
-						</li>
-						<li>Predefined colors: style="blue;"</li>
-						<li>Hexadecimal colors: style="#000000;"</li>
-						<li>rgb colors: style = “color: rgb(r value, g value, b value);”</li>
-						<li>Add colors to this HTML page below</li>
-						<script async src="//jsfiddle.net/sbComputerScienceClub/Latpru2v/embed/html,result/"></script>
-					</ul>
+					<h1>Demo links</h1>
+					//links here
 				 </section>
 				 <section data-background="https://images.unsplash.com/photo-1526666923127-b2970f64b422?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bdb6cf2659a6cc7dc29113c6ae4a5279&auto=format&fit=crop&w=1504&q=80">
-					<h1>Great tools to get colors</h1>
-					<br>
-					<ul>
-						<li>www.color-hex.com/</li>
-						<li>brandcolors.net/</li>
-						<li><a target="_blank" href="https://chrome.google.com/webstore/detail/colorpick-eyedropper/ohcpnigalekghcmgcdcenkpelffpdolg?hl=en">Or try this Chrome extention</a></li>
-					</ul>
-				 </section>
-				 <section data-background="https://images.unsplash.com/photo-1526666923127-b2970f64b422?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bdb6cf2659a6cc7dc29113c6ae4a5279&auto=format&fit=crop&w=1504&q=80">
-	<h1>Insert Rick Roll Here</h1>
+	<h1>Thanks for coming!</h1>
 				 </section>
 		</div>
 	</div>
