Added a demo link

--- a/public/slides/first/index.html
+++ b/public/slides/first/index.html
@@ -180,7 +180,7 @@ Drives society
 				 </section>
 				 <section data-background="../../assets/img/4.jpg">
 					<h1>Demo links</h1>
-					//links here
+					 <a href="https://lightslicer.herokuapp.com/">Light Slicer</a>
 				 </section>
 				 <section data-background="https://images.unsplash.com/photo-1526666923127-b2970f64b422?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bdb6cf2659a6cc7dc29113c6ae4a5279&auto=format&fit=crop&w=1504&q=80">
 	<h1>Thanks for coming!</h1>
