--- a/public/slides/beginners/day1/controls.html
+++ b/public/slides/beginners/day1/controls.html
@@ -12,27 +12,20 @@
 	<link rel="stylesheet" href="../../assets/revealjs/css/theme/black.css" id="theme">
 </head>
 <script>
-        const sudo=true;
+        const sudo= true,
+        controller = true,
+        radio = 'beginner';
         </script>
-<style>
-    .reveal{
-        display: none !important;
-    }
-    button {
-      height: 100%;
-      width:40%;
-    }
-</style>
 <body>
+        <form class="login">
+                <span>Whats the Password</span>
+                <input type="password" placeholder="Please enter your secret key!"/>
+                <input type="submit" value="➡" />
+            </form>
         <span id="prez-root">
                 <!-- Prez Starts here, ANYTHING should be here unless you know what your doing-->
                 <!-- You got to copy and paste your CODE to ONLY viewer.js. "this is really getto", well yes
                 but for the sake of simplicity and also the fact that we aren't using JSX for awesome linting and debugging, shhhhh-->
-                <form class="login">
-                    <span>Whats the Password (javascript)</span>
-                    <input type="password" placeholder="Please enter your secret key!"/>
-                    <input type="submit" value="➡" />
-                </form>
 
                 <div class="reveal blurred">
                     <div class="slides">
@@ -175,8 +168,8 @@
                 </div>
             </span>
 
-        <button onclick="Reveal.next();" style="float:right;">Next</button>
-        <button onclick="Reveal.nextFragment();" style="float:left;">Back</button>
+        <button onclick="Reveal.nextFragment();" style="float:right;">Next</button>
+        <button onclick="Reveal.prev();" style="float:left;">Back</button>
 
         <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
         <script src="../../assets/revealjs/lib/js/head.min.js"></script>
