--- a/public/slides/beginners/day1/index.html
+++ b/public/slides/beginners/day1/index.html
@@ -31,7 +31,7 @@
 	<div class="reveal blurred">
 		<div class="slides">
 			<section data-background="">
-				<h1>Welcome to the club computer science club <span id="year"></span></h1>
+				<h1>Welcome to the computer science club <span id="year"></span></h1>
 				<script>let currentYear = new Date().getFullYear(); document.getElementById('year').innerText = `${currentYear}-${currentYear + 1}`</script>
 			</section>
 				<section data-background="https://www.solidbackgrounds.com/images/2560x1440/2560x1440-true-blue-solid-color-background.jpg">
@@ -41,6 +41,14 @@
 					Contact us: <a class="email">sbcompsciclub@gmail.com</a>
 					<br><br>
 					Visit our site for more info: <a class="link">sbcompsciclub.github.io</a></p>
+				</section>
+				<section data-background="https://www.solidbackgrounds.com/images/2560x1440/2560x1440-true-blue-solid-color-background.jpg">
+				  <h1>Save The Date!/h1>
+					<p>hackSB: April 6,2019</p>
+					<br><br>
+					<p>hackja: October 26, 2018</p>
+					<br><br>
+					<p>Hackphs: November3-4, 2018</p>
 				</section>
 				<section data-background="https://sironatherapeutichorsemanship.files.wordpress.com/2017/09/plain-green-wallpaper.jpg?w=730">
 					<h1>What is web developement?</h1>
