--- a/public/slides/beginners/day1/index.html
+++ b/public/slides/beginners/day1/index.html
@@ -46,9 +46,9 @@
 				  <h1>Save The Date!/h1>
 					<p>hackSB: April 6,2019</p>
 					<br><br>
-					<p>hackja: October 26, 2018</p>
+					<p>hackja: October 26, 2018 <a class="link">"https://www.hackja.com/"</a></p>
 					<br><br>
-					<p>Hackphs: November3-4, 2018</p>
+					<p>Hackphs: November3-4, 2018 <a class="link">"http://hackphs.tech/"</a></p>
 				</section>
 				<section data-background="https://sironatherapeutichorsemanship.files.wordpress.com/2017/09/plain-green-wallpaper.jpg?w=730">
 					<h1>What is web developement?</h1>
