--- a/public/slides/beginners/day1/index.html
+++ b/public/slides/beginners/day1/index.html
@@ -43,12 +43,12 @@
 					Visit our site for more info: <a class="link">sbcompsciclub.github.io</a></p>
 				</section>
 				<section data-background="https://www.solidbackgrounds.com/images/2560x1440/2560x1440-true-blue-solid-color-background.jpg">
-				  <h1>Save The Date!/h1>
-					<p>hackSB: April 6,2019</p>
+					<h1>Save The Date!</h1>
+					<p>hackSB: April 6,2019
 					<br><br>
-					<p>hackja: October 26, 2018 <a class="link">"https://www.hackja.com/"</a></p>
+					hackja: October 26, 2018 <a class="link">"https://www.hackja.com/"</a>
 					<br><br>
-					<p>Hackphs: November3-4, 2018 <a class="link">"http://hackphs.tech/"</a></p>
+					Hackphs: November3-4, 2018 <a class="link">"http://hackphs.tech/"</a></p>
 				</section>
 				<section data-background="https://sironatherapeutichorsemanship.files.wordpress.com/2017/09/plain-green-wallpaper.jpg?w=730">
 					<h1>What is web developement?</h1>
